@@ -118,6 +118,7 @@ public:
   static void CreateShortcut(CFileItem* pItem);
   static void GetArtistDatabase(const CStdString& strFileName, CStdString& strArtistDBS);
   static void GetGenreDatabase(const CStdString& strFileName, CStdString& strGenreDBS);
+  static void GetFatXQualifiedPath(CStdString& strFileNameAndPath);
   static void ShortenFileName(CStdString& strFileNameAndPath);
   static bool IsISO9660(const CStdString& strFile);
   static bool IsSmb(const CStdString& strFile);
